<resources>
    <string name="app_name">NiceUserFrom</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTRE</string>
    <string name="username">Usuari</string>
    <string name="password">Contrasenya</string>
    <string name="forgot_password">Contrasenya Oblidada</string>
    <string name="registre">Registre</string>
    <string name="repeteix_contrasenya">Repeteix contrasenya</string>
    <string name="email">Correu</string>
    <string name="nom">Nom</string>
    <string name="cognom">cognom</string>
    <string name="aniversari">Aniversari</string>
    <string name="g_nere">Gènere</string>
    <string name="accepta">Accepta els Termes i Condicions d\'ús</string>
</resources>